--- a/model.ipynb
+++ b/model.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOr/tEBl7E3qEx8xFABxGTr",
+      "authorship_tag": "ABX9TyPYM6z2WmUVePu670p8JLeh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -202,10 +202,169 @@
         "    self.residual_connections = nn.ModuleList([ResidualConnection(dropout) for _ in range(2)])\n",
         "\n",
         "  def forward(self, x, src_mask):\n",
-        "    x = self.residual_connections[0](x, lambda x: self.self_attention_block(x, x, x, src_mask))"
+        "    x = self.residual_connections[0](x, lambda x: self.self_attention_block(x, x, x, src_mask))\n",
+        "    x = self.resifual_connections[1](x, self.feed_forward_block)\n",
+        "    return x"
       ],
       "metadata": {
         "id": "4NI0nSmj7wt8"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Encoder(nn.Module):\n",
+        "  def __init__(self, layers: nn.ModuleList) -> None:\n",
+        "    super().__init__()\n",
+        "    self.layers = layers\n",
+        "    self.norm = LayerNormalization()\n",
+        "\n",
+        "  def forward(self, x, mask):\n",
+        "    for layer in layers:\n",
+        "      x = layer(x, mask)\n",
+        "    return self.norm(x)"
+      ],
+      "metadata": {
+        "id": "k4LLY_O_Y5hg"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class DecoderBlock(nn.Module):\n",
+        "  def __init__(self, self_attention_block: MultiHeadAttentionBlock, cross_attention_block: MultiHeadAttentionBlock, feed_forward_block: FeedForwardBlock, dropout: float) -> None:\n",
+        "    super().__init__()\n",
+        "    self.self_attention_block = self_attention_block\n",
+        "    self.cross_attention_block = cross_attention_block\n",
+        "    self.feed_forward_block = feed_forward_block\n",
+        "    self.residual_connections = nn.ModuleList([ResidualConnection(dropout) for _ in range(3)])\n",
+        "\n",
+        "  def forward(self, x, encoder_output, src_mask, tgt_mask):\n",
+        "    x = self.residual_connections[0](x, lambda x: self.self_attention_block(x, x, x, tgt_mask))\n",
+        "    x = self.residual_connections[1](x, lambda x: self.cross_attention_block(x, encoder_output, encoder_output, src_mask))\n",
+        "    x = self.residual_connections[2](x, self.feed_forward_block)\n",
+        "    return x"
+      ],
+      "metadata": {
+        "id": "Rom0iLvVdGfU"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Decoder(nn.Module):\n",
+        "  def __init__(self, layers: nn.ModuleList) -> None:\n",
+        "    super().__init__()\n",
+        "    self.layers = layers\n",
+        "    self.norm = LayerNormalization()\n",
+        "  def forward(self, x, encoder_output, src_mask, tgt_mask):\n",
+        "    for layer in self.layers:\n",
+        "      x = layer(x, encoder_output, src_mask, tgt_mask)\n",
+        "    return self.norm(x)"
+      ],
+      "metadata": {
+        "id": "reFAjN9pd9Tl"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class ProjectionLayer(nn.Module):\n",
+        "  def __init__(self, d_model, vocab_size) -> None:\n",
+        "    super().__init__()\n",
+        "    self.proj = nn.Linear(d_model, vocab_size)\n",
+        "\n",
+        "  def forward(self, x):\n",
+        "    return torch.log_softmax(self.proj(x), dim = -1)"
+      ],
+      "metadata": {
+        "id": "zzkcsEXgfFrN"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Transformer(nn.Module):\n",
+        "\n",
+        "    def __init__(self, encoder: Encoder, decoder: Decoder, src_embed: InputEmbeddings, tgt_embed: InputEmbeddings, src_pos: PositionalEncoding, tgt_pos: PositionalEncoding, projection_layer: ProjectionLayer) -> None:\n",
+        "        super().__init__()\n",
+        "        self.encoder = encoder\n",
+        "        self.decoder = decoder\n",
+        "        self.src_embed = src_embed\n",
+        "        self.tgt_embed = tgt_embed\n",
+        "        self.src_pos = src_pos\n",
+        "        self.tgt_pos = tgt_pos\n",
+        "        self.projection_layer = projection_layer\n",
+        "\n",
+        "    def encode(self, src, src_mask):\n",
+        "        src = self.src_embed(src)\n",
+        "        src = self.src_pos(src)\n",
+        "        return self.encoder(src, src_mask)\n",
+        "\n",
+        "    def decode(self, encoder_output: torch.Tensor, src_mask: torch.Tensor, tgt: torch.Tensor, tgt_mask: torch.Tensor):\n",
+        "        tgt = self.tgt_embed(tgt)\n",
+        "        tgt = self.tgt_pos(tgt)\n",
+        "        return self.decoder(tgt, encoder_output, src_mask, tgt_mask)\n",
+        "\n",
+        "    def project(self, x):\n",
+        "        return self.projection_layer(x)"
+      ],
+      "metadata": {
+        "id": "f8BvIxAsFgAS"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def build_transformer(src_vocab_size: int, tgt_vocab_size: int, src_seq_len: int, tgt_seq_len: int, d_model: int=512, N: int=6, h: int=8, dropout: float=0.1, d_ff: int=2048) -> Transformer:\n",
+        "    src_embed = InputEmbeddings(d_model, src_vocab_size)\n",
+        "    tgt_embed = InputEmbeddings(d_model, tgt_vocab_size)\n",
+        "\n",
+        "    src_pos = PositionalEncoding(d_model, src_seq_len, dropout)\n",
+        "    tgt_pos = PositionalEncoding(d_model, tgt_seq_len, dropout)\n",
+        "\n",
+        "    encoder_blocks = []\n",
+        "    for _ in range(N):\n",
+        "        encoder_self_attention_block = MultiHeadAttentionBlock(d_model, h, dropout)\n",
+        "        feed_forward_block = FeedForwardBlock(d_model, d_ff, dropout)\n",
+        "        encoder_block = EncoderBlock(d_model, encoder_self_attention_block, feed_forward_block, dropout)\n",
+        "        encoder_blocks.append(encoder_block)\n",
+        "\n",
+        "    decoder_blocks = []\n",
+        "    for _ in range(N):\n",
+        "        decoder_self_attention_block = MultiHeadAttentionBlock(d_model, h, dropout)\n",
+        "        decoder_cross_attention_block = MultiHeadAttentionBlock(d_model, h, dropout)\n",
+        "        feed_forward_block = FeedForwardBlock(d_model, d_ff, dropout)\n",
+        "        decoder_block = DecoderBlock(d_model, decoder_self_attention_block, decoder_cross_attention_block, feed_forward_block, dropout)\n",
+        "        decoder_blocks.append(decoder_block)\n",
+        "\n",
+        "    encoder = Encoder(d_model, nn.ModuleList(encoder_blocks))\n",
+        "    decoder = Decoder(d_model, nn.ModuleList(decoder_blocks))\n",
+        "\n",
+        "    projection_layer = ProjectionLayer(d_model, tgt_vocab_size)\n",
+        "\n",
+        "    transformer = Transformer(encoder, decoder, src_embed, tgt_embed, src_pos, tgt_pos, projection_layer)\n",
+        "\n",
+        "    for p in transformer.parameters():\n",
+        "        if p.dim() > 1:\n",
+        "            nn.init.xavier_uniform_(p)\n",
+        "\n",
+        "    return transformer"
+      ],
+      "metadata": {
+        "id": "XgqI0ui-FhX5"
       },
       "execution_count": null,
       "outputs": []
